--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,39 @@
-server {
-    listen 80;
-    server_name polzzak-image.mojan.site;
+user root;
+worker_processes auto;
 
-    location /images/ {
-        root /usr/share/nginx/html;
-        autoindex off;  # 이 옵션을 켜면 /images 경로의 파일 목록이 브라우저에 표시됩니다.
-        expires 30d;   # 캐싱을 위한 HTTP 헤더 설정
-    }
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+	client_max_body_size 10M;  
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+    include /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        location /images/ {
+            alias /usr/share/nginx/html/images/;
+            autoindex off;
+            expires 30d;
+        }
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+        }
     }
 }
+
