--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,10 @@ http {
         listen 80;
         server_name localhost;
 
+        location /upload/ {
+            proxy_pass http://localhost:5000/upload;
+        }
+
         location /images/ {
             alias /usr/share/nginx/html/images/;
             autoindex off;
@@ -34,6 +38,9 @@ http {
             root /usr/share/nginx/html;
             index index.html;
         }
+
+        
     }
+    
 }
 
